samples/_failures_safe/1761498231_3eeb1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e25fe4d2.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_e25fe4d2.c:172:5: error: expected expression at end of input
  172 |     if (parser.current.type !=
      |     ^~
./samples/SAFE/__tmp_e25fe4d2.c:172:5: error: expected declaration or statement at end of input
